<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="action_settings">Settings</string>
    <string name="app_name">Phronesis Rom Control</string>
    <string name="app_reboot_required_message">"%1$s reboot is required for the changes to take effect.
Reboot now?"</string>
    <string name="app_reboot_required_title">App Reboot Required</string>
    <string name="backup_dialog_title">Backup RomControl</string>
    <string name="cancel">Cancel</string>
    <string name="confirm_backup">Really Backup ?</string>
    <string name="confirm_restore">Do you want to restore RomControl Keys?</string>
    <string name="dialog_color_picker">Color Picker</string>
    <string name="drawer_close">Menu closed</string>
    <string name="drawer_open">Menu opened</string>
    <string name="exit">Exit App</string>
    <string name="gaining_root">Acquiring root access. Please wait...</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="later">Later</string>
    <string name="listview_accelerate_decelerate_interpolator">Accelerate decelerate</string>
    <string name="listview_accelerate_interpolator">Accelerate</string>
    <string name="listview_alpha">Alpha</string>
    <string name="listview_anticipate_interpolator">Anticipate</string>
    <string name="listview_anticipate_overshoot_interpolator">Anticipate overshoot</string>
    <string name="listview_bounce_interpolator">Bounce</string>
    <string name="listview_decelerate_interpolator">Decelerate</string>
    <string name="listview_fold">Fold</string>
    <string name="listview_off">Off</string>
    <string name="listview_overshoot_interpolator">Overshoot</string>
    <string name="listview_rotate">Rotate</string>
    <string name="listview_scale">Scale</string>
    <string name="listview_stack_bottom">Stack (bottom)</string>
    <string name="listview_stack_top">Stack (top)</string>
    <string name="listview_translate_left">Translate (left)</string>
    <string name="listview_translate_right">Translate (right)</string>
    <string name="listview_unfold">Unfold</string>
    <string name="listview_wave_left">Wave (left)</string>
    <string name="listview_wave_right">Wave (right)</string>
    <string name="lockscreen_alarm_text_color_summary">Change lockscreen alarm text color</string>
    <string name="lockscreen_alarm_text_color_title">Lockscreen alarm text color</string>
    <string name="lockscreen_barometer_text_color_summary">Change barometer text color</string>
    <string name="lockscreen_barometer_text_color_title">Lockscreen barometer text color</string>
    <string name="lockscreen_city_weather_text_color_summary">Change lockscreen city weather text color</string>
    <string name="lockscreen_city_weather_text_color_title">Lockscreen city weather text color</string>
    <string name="lockscreen_degree_weather_text_color_summary">Change lockscreen degree weather text color</string>
    <string name="lockscreen_degree_weather_text_color_title">Lockscreen degree weather text color</string>
    <string name="lockscreen_max_temp_weather_text_color_summary">Change lockscreen max temp weather text color</string>
    <string name="lockscreen_max_temp_weather_text_color_title">Lockscreen max temp weather text color</string>
    <string name="lockscreen_min_temp_weather_text_color_summary">Change lockscreen min temp weather text color</string>
    <string name="lockscreen_min_temp_weather_text_color_title">Lockscreen min temp weather text color</string>
    <string name="lockscreen_owner_text_color_summary">Change lockscreen owner text color</string>
    <string name="lockscreen_owner_text_color_title">Lockscreen owner text color</string>
    <string name="lockscreen_show_pressure_title">Lockscreen show pressure</string>
    <string name="lockscreen_sunrise_text_color_summary">Change lockscreen sunrise text color</string>
    <string name="lockscreen_sunrise_text_color_title">Lockscreen sunrise text color</string>
    <string name="lockscreen_sunset_text_color_summary">Change lockscreen sunset text color</string>
    <string name="lockscreen_sunset_text_color_title">Lockscreen sunset text color</string>
    <string name="lockscreen_temp_weather_text_color_summary">Change lockscreen temp weather text color</string>
    <string name="lockscreen_temp_weather_text_color_title">Lockscreen temp weather text color</string>
    <string name="lockscreen_weather_text_color_summary">Change lockscreen weather text color</string>
    <string name="lockscreen_weather_text_color_title">Lockscreen weather text color</string>
    <string name="missing_su">"Your device is either not rooted or the app was denied root permissions.
Please check your root/su status and try again later."</string>
    <string name="missing_su_title">Could not get root access</string>
    <string name="ok">Ok</string>
    <string name="press_color_to_apply">Press on Color to apply</string>
    <string name="restore_next_boot">Restoring on next Reboot</string>
    <string name="show_icon_off">Hide</string>
    <string name="show_icon_on">Show</string>
    <string name="summaryOff">Disabled</string>
    <string name="summaryOn">Enabled</string>
    <string name="theme_chooser_dialog_title">Choose Theme</string>
    <string name="volbtn_music_controls_summary">Customize volume rocker action</string>
    <string name="volbtn_music_controls_title">Music Control</string>
    <string name="volbtn_timeout_summary">%s</string>
    <string name="volbtn_timeout_title">Button delay</string>
    <string name="volbtn_toggle_title">Music Control</string>
    <string name="volbtn_vol_down_summary">%s</string>
    <string name="volbtn_vol_down_title">Volume Down action</string>
    <string name="volbtn_vol_up_summary">%s</string>
    <string name="volbtn_vol_up_title">Volume Up action</string>
    <string name="dynamic_status_bar_title">Dynamic status bar</string>
    <string name="dynamic_status_bar_color_title">Dynamic status bar color</string>
    <string name="dynamic_status_bar_color_summary">Automatically update background color of the status bar</string>
    <string name="dynamic_status_bar_gradient_title">Gradient</string>
    <string name="dynamic_status_bar_gradient_summary">Overlay a gradient on the status bar</string>
    <string name="dynamic_status_bar_filter_title">Darkening</string>
    <string name="dynamic_status_bar_filter_summary">Overlay a darkening filter on the status bar</string>
    <string name="dsb_gradient_filter_value_0">Off</string>
    <string name="dsb_gradient_filter_value_1">Only on the desktop</string>
    <string name="dsb_gradient_filter_value_2">Everywhere except the desktop</string>
    <string name="dsb_gradient_filter_value_3">On</string>
    <string name="dynamic_status_bar_filter_value">The intensity of the darkening filter</string>
</resources>
